Changes for 1.6.3

 - [ZBX-728] fixed displaying "no status update" error for template triggers (Vedmak)
 - [ZBX-738] fixed processing of existing data when -n parameter is used for zabbix_server (Sasha)
 - [ZBX-736] fixed "Undefined index error" during frontend installation (Vedmak)
 - [ZBX-735] fixed filter in audit filtering only logs (Vedmak) 
 - [ZBX-734] fixed evaluation of {ITEM.LASTVALUE} if the trigger expression consists of several items (Sasha) 
 - [ZBX-732] fixed wrong action count in audit log (Vedmak)
 - [ZBX-731] fixed resetting of web graph periods (Vedmak)
 - [ZBX-730] fixed possible Windows agent crash when processing eventlog[] (Sasha)
 - [ZBX-555] added entity counts on interfaces (Vedmak)
 - [ZBX-724] improved queries in "Graphs" page (Artem)
 - [ZBX-725] added new default user group "Disabled" (Vedmak)
 - [ZBX-723] fixed Wrong URL when add rights to user group (Vedmak)
 - [ZBX-720] edited configure.in file to make some error messages more sensible (Dmitry)
 - [ZBX-665] corrected some typos in misc/conf/zabbix_server.conf (Dmitry)
 - corrected some typos in test/env/standalone/conf/template_server.conf (Dmitry)
 - [ZBX-615] fixed processing of four-character-long item keys (Dmitry)
 - [ZBX-697] trigger description in "Last 20 issues" is link to the URL defined in trigger parameters + minor GUI typos fix (Vedmak)
 - [ZBX-473] fixed SNMP-related compilation problem with undefined 'localname' under some platforms (Sasha)
 - [ZBX-718] fixed web graphs start time not changing (Vedmak)
 - [ZBX-699] fixed recursion detection in Include directive for config files (Sasha)
 - [ZBX-301] fixed minor GUI text errors  (Vedmak)
 - [ZBX-716] fixed wrong caption for graph item editing form (Vedmak)
 - [ZBX-717] all templates linked to group Templates in default config (Sasha)
 - [ZBX-715] fixed "Invalid URL" error when choose History from history submenu (Vedmak)
 - [ZBX-713] fixed "values per second" having too many decimal places (Vedmak)