@@ -30,11 +30,12 @@ Hostname=ZABBIX Server
 # Source IP address for outgouing connections
 #SourceIP=
 
-# Number of pre-forked instances of zabbix_agentd.
-# Default value is 5
-# This parameter must be between 1 and 16
+# Number of pre-forked instances of zabbix_agentd,
+# which process passive checks.
+# Default value is 3.
+# This parameter must be between 1 and 16.
 
-StartAgents=5
+StartAgents=3
 
 # How often refresh list of active checks. 2 minutes by default.
 
@@ -43,6 +44,11 @@ StartAgents=5
 # Disable active checks. The agent will work in passive mode listening server.
 
 #DisableActive=1
+
+# Disable passive checks. The agent will not listen to any TCP ports.
+# Only active checks will be processed.
+
+#DisablePassive=1
 
 # Enable remote commands for ZABBIX agent. By default remote commands disabled.
 
