@@ -27,11 +27,12 @@ ListenPort={PORT}
 
 #ListenIP=127.0.0.1
 
-# Number of pre-forked instances of zabbix_agentd.
-# Default value is 5
-# This parameter must be between 1 and 16
+# Number of pre-forked instances of zabbix_agentd,
+# which will process passive checks.
+# Default value is 3.
+# This parameter must be between 1 and 16.
 
-StartAgents=5
+StartAgents=3
 
 # How often refresh list of active checks. 2 minutes by default.
 
@@ -40,6 +41,11 @@ StartAgents=5
 # Disable active checks. The agent will work in passive mode listening server.
 
 #DisableActive=1
+
+# Disable passive checks. The agent will not listen to any TCP ports.
+# Olny active checks will be processed.
+
+#DisablePassive=1
 
 # Enable remote commands for ZABBIX agent. By default remote commands disabled.
 
